2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct scheduling of new prerequisites when upgrading.

	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
	[ACTION_UPGRADE && ACTION_PRIMARY]: Don't exclude scheduling for this
	case of a prerequisite with no previously installed version; it may be
	a delegated primary requirement of a meta-package.

2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't require subsystem within user specified version bounds.

	* src/pkgdeps.cpp (pkgActionItem::ApplyBounds): Automatically consider
	"*" wild-card matches for subsystem, if user doesn't specify it.

2012-04-09  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Fix missing include.

	* src/pkgdeps.cpp (pkgopts.h): Include unconditionally; do not rely...
	(debug.h) [DEBUG_TRACE_DYNAMIC]: ...on this, for indirect inclusion.

2012-04-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a srcdist package construction defect.

	* Makefile.in (srcdist) [for SRCDIST_SUBDIRS]: Use...
	(mkinstalldirs): ...this, to create package image directories.

2012-04-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add scripting hooks to support creation of MS-Windows shortcuts.

	* src/clistub.c (progname): New static variable with file scope; it
	replaces former automatic variable, of same name, in main() function.
	(set_script_hook): New static function; implement it, and call it...
	(main) [--desktop, --start-menu]: ...from here, to interpret these new
	command line options; they are propagated to scripts via...
	(MINGW_GET_DESKTOP_HOOK, MINGW_GET_START_MENU_HOOK): ...these new
	internally assigned environment variables.
	(help_text): Document --desktop and --start-menu.

	* scripts/libexec/setup.lua scripts/libexec/wsh.lua: New lua module
	files; they implement a lua scripting API; they delegate requests to
	the Windows Scripting Host, via either of this pair of...